write lesson endpoint
